Table "cache" {
  "key" varchar(255) [pk, not null]
  "value" mediumtext [not null] هي
  "expiration" bigint [not null]

  Indexes {
    expiration [name: "cache_expiration_index"]
  }
}

Table "cache_locks" {
  "key" varchar(255) [pk, not null]
  "owner" varchar(255) [not null]
  "expiration" bigint [not null]

  Indexes {
    expiration [name: "cache_locks_expiration_index"]
  }
}

Table "failed_jobs" {
  "id" bigint [pk, not null, increment]
  "uuid" varchar(255) [not null]
  "connection" varchar(255) [not null]
  "queue" varchar(255) [not null]
  "payload" longtext [not null]
  "exception" longtext [not null]
  "failed_at" timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    uuid [unique, name: "failed_jobs_uuid_unique"]
    (connection, queue, failed_at) [name: "failed_jobs_connection_queue_failed_at_index"]
  }
}

Table "job_batches" {
  "id" varchar(255) [pk, not null]
  "name" varchar(255) [not null]
  "total_jobs" int [not null]
  "pending_jobs" int [not null]
  "failed_jobs" int [not null]
  "failed_job_ids" longtext [not null]
  "options" mediumtext
  "cancelled_at" int
  "created_at" int [not null]
  "finished_at" int
}

Table "jobs" {
  "id" bigint [pk, not null, increment]
  "queue" varchar(255) [not null]
  "payload" longtext [not null]
  "attempts" smallint [not null]
  "reserved_at" int
  "available_at" int [not null]
  "created_at" int [not null]

  Indexes {
    queue [name: "jobs_queue_index"]
  }
}

Table "media" {
  "id" bigint [pk, not null, increment]
  "model_type" varchar(255) [not null]
  "model_id" bigint [not null]
  "uuid" char(36)
  "collection_name" varchar(255) [not null]
  "name" varchar(255) [not null]
  "file_name" varchar(255) [not null]
  "mime_type" varchar(255)
  "disk" varchar(255) [not null]
  "conversions_disk" varchar(255)
  "size" bigint [not null]
  "manipulations" json [not null]
  "custom_properties" json [not null]
  "generated_conversions" json [not null]
  "responsive_images" json [not null]
  "order_column" int
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    uuid [unique, name: "media_uuid_unique"]
    (model_type, model_id) [name: "media_model_type_model_id_index"]
    order_column [name: "media_order_column_index"]
  }
}

Table "migrations" {
  "id" int [pk, not null, increment]
  "migration" varchar(255) [not null]
  "batch" int [not null]
}

Table "password_reset_tokens" {
  "email" varchar(255) [pk, not null]
  "token" varchar(255) [not null]
  "created_at" timestamp
}

Table "personal_access_tokens" {
  "id" bigint [pk, not null, increment]
  "tokenable_type" varchar(255) [not null]
  "tokenable_id" bigint [not null]
  "name" text [not null]
  "token" varchar(64) [not null]
  "abilities" text
  "last_used_at" timestamp
  "expires_at" timestamp
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    (tokenable_type, tokenable_id) [name: "personal_access_tokens_tokenable_type_tokenable_id_index"]
    token [unique, name: "personal_access_tokens_token_unique"]
    expires_at [name: "personal_access_tokens_expires_at_index"]
  }
}

Table "notifications" {
  "id" char(36) [pk, not null]
  "type" varchar(255) [not null]
  "notifiable_type" varchar(255) [not null]
  "notifiable_id" bigint [not null]
  "data" text [not null]
  "read_at" timestamp
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    (notifiable_type, notifiable_id) [name: "notifications_notifiable_type_notifiable_id_index"]
  }
}

Table "permission_role" {
  "permission_id" bigint [not null]
  "role_id" bigint [not null]

  Indexes {
    (permission_id, role_id) [pk]
    role_id [name: "permission_role_role_id_foreign"]
  }
}

Table "permission_user" {
  "permission_id" bigint [not null]
  "user_id" bigint [not null]
  "user_type" varchar(255) [not null]
  "team_id" bigint

  Indexes {
    (user_id, permission_id, user_type, team_id) [unique, name: "permission_user_user_id_permission_id_user_type_team_id_unique"]
    permission_id [name: "permission_user_permission_id_foreign"]
    team_id [name: "permission_user_team_id_foreign"]
  }
}

Table "permissions" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "display_name" varchar(255)
  "description" varchar(255)
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    name [unique, name: "permissions_name_unique"]
  }
}

Table "role_user" {
  "role_id" bigint [not null]
  "user_id" bigint [not null]
  "user_type" varchar(255) [not null]
  "team_id" bigint

  Indexes {
    (user_id, role_id, user_type, team_id) [unique, name: "role_user_user_id_role_id_user_type_team_id_unique"]
    role_id [name: "role_user_role_id_foreign"]
    team_id [name: "role_user_team_id_foreign"]
  }
}

Table "roles" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "display_name" varchar(255)
  "description" varchar(255)
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    name [unique, name: "roles_name_unique"]
  }
}

Table "sessions" {
  "id" varchar(255) [pk, not null]
  "user_id" bigint
  "ip_address" varchar(45)
  "user_agent" text
  "payload" longtext [not null]
  "last_activity" int [not null]

  Indexes {
    user_id [name: "sessions_user_id_index"]
    last_activity [name: "sessions_last_activity_index"]
  }
}

Table "teams" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "display_name" varchar(255)
  "description" varchar(255)
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    name [unique, name: "teams_name_unique"]
  }
}

Table "users" {
  "id" bigint [pk, not null, increment]
  "name" varchar(255) [not null]
  "email" varchar(255) [not null]
  "email_verified_at" timestamp
  "job_title" varchar(100) [not null]
  "exp" smallint [not null]
  "password" varchar(255) [not null]
  "remember_token" varchar(100)
  "created_at" timestamp
  "updated_at" timestamp

  Indexes {
    email [unique, name: "users_email_unique"]
  }
}

Table "projects" {
    id bigint [pk, increment]
    created_by bigint [not null]
    name varchar(255) [not null]
    description text [not null]
    start_date date [not null]
    deadline date [not null]
    priority varchar(255) [not null]
    status varchar(255) [not null]
    created_at timestamp
    updated_at timestamp

    Indexes {
        created_by [name: "projects_created_by_foreign"]
    }
}
Ref "projects_created_by_foreign":"projects"."created_by" > "users"."id" [update: cascade, delete: cascade]

Table "tasks" {
    id bigint [pk, increment]
    project_id bigint [not null]
    title varchar(255) [not null]
    description text [not null]
    start_date datetime [not null]
    due_date datetime [not null]
    progress smallint [not null]
    status tasks_status_enum [not null]
    priority tasks_priority_enum [not null]
    created_at timestamp
    updated_at timestamp

    Indexes {
        project_id [name: "tasks_project_id_foreign"]
    }
}
Enum "tasks_status_enum" {
    "Pending"
    "in_progress"
    "in_review"
    "completed"
}
Enum "tasks_priority_enum" {
    "low"
    "medium"
    "high"
    "critical"
}
Ref "tasks_project_id_foreign":"tasks"."project_id" > "projects"."id" [update: cascade, delete: cascade]

Table "team_user" {
    team_id bigint [not null]
    user_id bigint [not null]

    Indexes {
        team_id [name: "team_user_team_id_foreign"]
        user_id [name: "team_user_user_id_foreign"]
    }
}
Ref "team_user_user_id_foreign":"team_user"."user_id" <> "users"."id" [update: cascade, delete: cascade]
Ref "team_user_team_id_foreign":"team_user"."team_id" <> "teams"."id" [update: cascade, delete: cascade]


Table "task_user" {
    task_id bigint [not null]
    user_id bigint [not null]

    Indexes {
        task_id [name: "task_user_task_id_foreign"]
        user_id [name: "task_user_user_id_foreign"]
    }
}
Ref "task_user_user_id_foreign":"task_user"."user_id" <> "users"."id" [update: cascade, delete: cascade]
Ref "task_user_task_id_foreign":"task_user"."task_id" <> "tasks"."id" [update: cascade, delete: cascade]

Table "project_team" {
    project_id bigint [not null]
    team_id bigint [not null]

    Indexes {
        project_id [name: "project_team_project_id_foreign"]
        team_id [name: "project_team_team_id_foreign"]
    }
}
Ref "project_team_project_id_foreign":"project_team"."project_id" <> "projects"."id" [update: cascade, delete: cascade]
Ref "project_team_team_id_foreign":"project_team"."team_id" <> "teams"."id" [update: cascade, delete: cascade]

Table "reports" {
    id bigint [pk, increment]
    report_type varchar(255) [not null, default: 'project']
    note text
    start_date date [not null]
    end_date date [not null]
    created_at timestamp
    updated_at timestamp
    user_id bigint [not null]

    Indexes {
        user_id [name: "reports_user_id_foreign"]
    }
}
Ref "reports_user_id_foreign":"reports"."user_id" > "users"."id" [delete: cascade]

Table "meetings" {
    id bigint [pk, increment]
    title varchar(255) [not null]
    description text [null]
    starts_at datetime [not null]
    ends_at datetime [not null]
    meeting_link varchar(255) [null]
    location varchar(255) [null]
    created_by bigint [not null]
    project_id bigint [null]
    created_at timestamp
    updated_at timestamp
}
Ref "meetings_created_by_foreign":"meetings"."created_by" > "users"."id" [update: cascade, delete: cascade]
Ref "meetings_project_id_foreign":"meetings"."project_id" > "projects"."id" [update: cascade, delete: set null]

Table "meeting_user" {
    id bigint [pk, increment]
    meeting_id bigint [not null]
    user_id bigint [not null]
}
Ref "meeting_user_meeting_id_foreign":"meeting_user"."meeting_id" <> "meetings"."id" [update: cascade, delete: cascade]
Ref "meeting_user_user_id_foreign":"meeting_user"."user_id" <> "users"."id" [update: cascade, delete: cascade]

Table "meeting_team" {
    id bigint [pk, increment]
    meeting_id bigint [not null]
    team_id bigint [not null]
}
Ref "meeting_team_meeting_id_foreign":"meeting_team"."meeting_id" <> "meetings"."id" [update: cascade, delete: cascade]
Ref "meeting_team_team_id_foreign":"meeting_team"."team_id" <> "teams"."id" [update: cascade, delete: cascade]


Ref "permission_role_permission_id_foreign":"permissions"."id" < "permission_role"."permission_id" [update: cascade, delete: cascade]

Ref "permission_role_role_id_foreign":"roles"."id" < "permission_role"."role_id" [update: cascade, delete: cascade]

Ref "permission_user_permission_id_foreign":"permissions"."id" < "permission_user"."permission_id" [update: cascade, delete: cascade]

Ref "permission_user_team_id_foreign":"teams"."id" < "permission_user"."team_id" [update: cascade, delete: cascade]

Ref "role_user_role_id_foreign":"roles"."id" < "role_user"."role_id" [update: cascade, delete: cascade]

Ref "role_user_team_id_foreign":"teams"."id" < "role_user"."team_id" [update: cascade, delete: cascade]
